--- a/widgets/hero-slider/widget.njk
+++ b/widgets/hero-slider/widget.njk
@@ -1,4 +1,3 @@
-{{widget.blocks | json}}
 {# Height classes based on setting #}
 {% set heightClass = {
   'small': 'min-h-[400px]',
@@ -99,7 +98,7 @@
 
             {% if block.data.subtitle %}
               <p class="text-lg md:text-xl mb-6 opacity-90 slide-up" style="animation-delay: 0.1s">
-                {{ block.data.subtitle }}
+                {{ block.data.subtitle | safe }}
               </p>
             {% endif %}
 
