--- a/widgets/testimonials/widget.njk
+++ b/widgets/testimonials/widget.njk
@@ -69,7 +69,7 @@
                   </div>
 
                   {# Content #}
-                  <p class="text-lg text-gray-600 mb-6 leading-relaxed">{{ testimonial.data.content }}</p>
+                  <p class="text-lg text-gray-600 mb-6 leading-relaxed">{{ testimonial.data.content | safe }}</p>
 
                   {# Author #}
                   <div class="flex items-center justify-center gap-4">
@@ -125,7 +125,7 @@
             </div>
 
             {# Content #}
-            <p class="text-gray-600 mb-6 leading-relaxed">{{ testimonial.data.content }}</p>
+            <p class="text-gray-600 mb-6 leading-relaxed">{{ testimonial.data.content | safe }}</p>
 
             {# Author #}
             <div class="flex items-center gap-3">
